5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1807_2565.log
== TEST (2019-06-06 17:30:05) 
-- CODE:
from numpy import *
a = array(eval(input("media: ")))
b = array(eval(input("horas: ")))
c=int(input("carga: "))
v=zeros(3,dtype=int)
for i in range(size(a)):
	if(a[i]>=5 and b[i]>= 0.75*c):
		v[0]=v[0]+1
	if(a[i]<5 and b[i]>=0.75*c):
		v[1]=v[1]+1
	else:
		v[2]=v[2]+1
print(v)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:33:08) 
-- CODE:
from numpy import *
a = array(eval(input("media: ")))
b = array(eval(input("horas: ")))
c=int(input("carga: "))
v=zeros(3,dtype=int)
for i in range(size(a)):
	if(a[i]>=5 and b[i]>= 0.75*c):
		v[0]=v[0]+1
	if(a[i]<5 and b[i]>=0.75*c):
		v[1]=v[1]+1
	if(a[i]<0.75*c)
		v[2]=v[2]+1
print(v)		
-- EXECUTION TIME:
0.718565
-- ERROR:
  File "/home/codebench/codes/1807/2565/main.py", line 11
    if(a[i]<0.75*c)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:34:16) 
-- CODE:
from numpy import *
a = array(eval(input("media: ")))
b = array(eval(input("horas: ")))
c=int(input("carga: "))
v=zeros(3,dtype=int)
for i in range(size(a)):
	if(a[i]>=5 and b[i]>= 0.75*c):
		v[0]=v[0]+1
	if(a[i]<5 and b[i]>=0.75*c):
		v[1]=v[1]+1
	if(b[i]<0.75*c)
		v[2]=v[2]+1
print(v)		
-- EXECUTION TIME:
0.65596
-- ERROR:
  File "/home/codebench/codes/1807/2565/main.py", line 11
    if(b[i]<0.75*c)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:34:27) 
-- CODE:
from numpy import *
a = array(eval(input("media: ")))
b = array(eval(input("horas: ")))
c=int(input("carga: "))
v=zeros(3,dtype=int)
for i in range(size(a)):
	if(a[i]>=5 and b[i]>= 0.75*c):
		v[0]=v[0]+1
	if(a[i]<5 and b[i]>=0.75*c):
		v[1]=v[1]+1
	if(b[i]<0.75*c)
		v[2]=v[2]+1
print(v)		
-- EXECUTION TIME:
1.27046
-- ERROR:
  File "/home/codebench/codes/1807/2565/main.py", line 11
    if(b[i]<0.75*c)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:34:28) 
-- CODE:
from numpy import *
a = array(eval(input("media: ")))
b = array(eval(input("horas: ")))
c=int(input("carga: "))
v=zeros(3,dtype=int)
for i in range(size(a)):
	if(a[i]>=5 and b[i]>= 0.75*c):
		v[0]=v[0]+1
	if(a[i]<5 and b[i]>=0.75*c):
		v[1]=v[1]+1
	if(b[i]<0.75*c)
		v[2]=v[2]+1
print(v)		
-- EXECUTION TIME:
3.22008
-- ERROR:
  File "/home/codebench/codes/1807/2565/main.py", line 11
    if(b[i]<0.75*c)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:34:28) 
-- CODE:
from numpy import *
a = array(eval(input("media: ")))
b = array(eval(input("horas: ")))
c=int(input("carga: "))
v=zeros(3,dtype=int)
for i in range(size(a)):
	if(a[i]>=5 and b[i]>= 0.75*c):
		v[0]=v[0]+1
	if(a[i]<5 and b[i]>=0.75*c):
		v[1]=v[1]+1
	if(b[i]<0.75*c)
		v[2]=v[2]+1
print(v)		
-- EXECUTION TIME:
3.12096
-- ERROR:
  File "/home/codebench/codes/1807/2565/main.py", line 11
    if(b[i]<0.75*c)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:34:28) 
-- CODE:
from numpy import *
a = array(eval(input("media: ")))
b = array(eval(input("horas: ")))
c=int(input("carga: "))
v=zeros(3,dtype=int)
for i in range(size(a)):
	if(a[i]>=5 and b[i]>= 0.75*c):
		v[0]=v[0]+1
	if(a[i]<5 and b[i]>=0.75*c):
		v[1]=v[1]+1
	if(b[i]<0.75*c)
		v[2]=v[2]+1
print(v)		
-- EXECUTION TIME:
2.98542
-- ERROR:
  File "/home/codebench/codes/1807/2565/main.py", line 11
    if(b[i]<0.75*c)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:34:36) 
-- CODE:
from numpy import *
a = array(eval(input("media: ")))
b = array(eval(input("horas: ")))
c=int(input("carga: "))
v=zeros(3,dtype=int)
for i in range(size(a)):
	if(a[i]>=5 and b[i]>= 0.75*c):
		v[0]=v[0]+1
	if(a[i]<5 and b[i]>=0.75*c):
		v[1]=v[1]+1
	else:
		v[2]=v[2]+1
print(v)		
-- EXECUTION TIME:
1.04947
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 5]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 7]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
media: horas: carga: [5 1 9]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:37:53) 
-- CODE:
from numpy import *
a = array(eval(input("media: ")))
b = array(eval(input("horas: ")))
c=int(input("carga: "))
v=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>=5 and b[i]>= 0.75*c):
		v[0]=v[0]+1
	if(a[i]<5 and b[i]>=0.75*c):
		v[1]=v[1]+1
	else:
		v[2]=v[2]+1
print(v)		
-- EXECUTION TIME:
1.02197
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 5]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 7]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 9]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:37:59) 
-- CODE:
from numpy import *
a = array(eval(input("media: ")))
b = array(eval(input("horas: ")))
c=int(input("carga: "))
v=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>=5 and b[i]>= 0.75*c):
		v[0]=v[0]+1
	if(a[i]<5 and b[i]>=0.75*c):
		v[1]=v[1]+1
	else:
		v[2]=v[2]+1
print(v)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:39:42) 
-- CODE:
from numpy import *
a = array(eval(input("media: ")))
b = array(eval(input("horas: ")))
c=int(input("carga: "))
v=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>=5 and b[i]>= 0.75*c):
		v[0]=v[0]+1
	elif(a[i]<5 and b[i]>=0.75*c):
		v[1]=v[1]+1
	else:
		v[2]=v[2]+1
print(v)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:39:53) 
-- CODE:
from numpy import *
a = array(eval(input("media: ")))
b = array(eval(input("horas: ")))
c=int(input("carga: "))
v=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>=5 and b[i]>= 0.75*c):
		v[0]=v[0]+1
	elif(a[i]<5 and b[i]>=0.75*c):
		v[1]=v[1]+1
	else:
		v[2]=v[2]+1
print(v)		
-- EXECUTION TIME:
1.10364
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:33:26) 
-- CODE:
from numpy import *
a = array(eval(input("meia: ")))
b = array(eval(input("frequencia: ")))
d = int(input("carga: "))
c = zeros(3,dtype=int)
for i in range(size(a)):
	if(a[i] >= 5 and b[i] >= 0.75*c):
		c[0] = c[0] + 1
	if(a[i] < 5 and b[i] >= 0.75*c):
		c[1] = c[1] + 1
	if(a[i] >= 5 and b[i]< 0.75*c):
		c[2] = c[2] + 1
print(c)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:52:02) 
-- CODE:
from numpy import *
a = array(eval(input("meia: ")))
b = array(eval(input("frequencia: ")))
d = int(input("carga: "))
c = zeros(3,dtype=int)
for i in range(size(a)):
	if(a[i] >= 5 and b[i] >= 0.75*c):
		c[0] = c[0] + 1
	if(a[i] < 5 and b[i] >= 0.75*c):
		c[1] = c[1] + 1
	if( b[i] < 0.75*c):
		c[2] = c[2] + 1
print(c)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 17:05:35) 
-- CODE:
from numpy import *
a = array(eval(input("meia: ")))
b = array(eval(input("frequencia: ")))
d = int(input("carga: "))
c = zeros(3,dtype=int)
for i in range(size(a)):
	if(a[i] >= 5 and b[i] >= 0.75*d):
		c[0] = c[0] + 1
	if(a[i] < 5 and b[i] >= 0.75*d):
		c[1] = c[1] + 1
	if( b[i] < 0.75*d):
		c[2] = c[2] + 1
print(c)
	
	
	
-- EXECUTION TIME:
1.06948
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
